--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1541,7 +1541,51 @@ input[type="submit"] {
     margin-bottom: 38px;
     color: #ff8a00;
 }
+/* .rotate{
+    animation: rotation 2s infinite linear; 
+    
+}
+@keyframes rotation {
+    100%{ transform:rotatey(360deg); }
+  } */
+ #slidecaption {
+    -webkit-animation-name: spinner; 
+   -webkit-animation-timing-function: linear; 
+   -webkit-animation-iteration-count: infinite; 
+   -webkit-animation-duration: 2s; 
+   animation-name: spinner; 
+   animation-timing-function: linear; 
+   animation-iteration-count: infinite; 
+   animation-duration: 2s; 
+   -webkit-transform-style: preserve-3d; 
+   -moz-transform-style: preserve-3d; 
+   -ms-transform-style: preserve-3d; 
+   transform-style: preserve-3d;
+}
 
+ @-webkit-keyframes spinner { 
+   from 
+   { 
+       -webkit-transform: rotateY(0deg); 
+   } 
+   to { 
+       -webkit-transform: rotateY(-360deg); 
+   } 
+} 
+@keyframes spinner { 
+   from { 
+       -moz-transform: rotateY(0deg); 
+       -ms-transform: rotateY(0deg); 
+       transform: rotateY(0deg); 
+   } 
+   to 
+   { 
+       -moz-transform: rotateY(-360deg); 
+       -ms-transform: rotateY(-360deg); 
+       transform: rotateY(-360deg); 
+   
+   } 
+} 
 @media (max-width: 767px) {
     .section-header .cate {
         margin-bottom: 25px;
